--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "heatmap.js": "^2.0.5",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
