--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8000",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "heatmap.js": "^2.0.5",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
-    "vue2-leaflet": "^1.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -34,7 +35,9 @@
       "plugin:vue/essential",
       "@vue/standard"
     ],
-    "rules": {},
+    "rules": {
+      "no-undef": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
