--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Pacific Garbage Map",
-  "short_name": "Pacific Garbage Map",
+  "name": "Plastic Spotters",
+  "short_name": "Plastic Spotters",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
